<resources>
    <string name="app_name">Dictionary Mathematic</string>
    <string name="lewati">Lewati</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="memulai">START</string>
    <string name="visitclass">JELAJAHI KELAS</string>
    <string name="showall">LIHAT SEMUA KELAS</string>
    <string name="ObOneTitle">Gabung ke Kelas Favoritmu</string>
    <string name="ObOneDesc">Pelajari konsep dasar dan pahami materi kesukaanmu dengan mudah  </string>
    <string name="desc_obone">onboardingone</string>
    <string name="desc_obtwo">onboardingtwo</string>
    <string name="desc_onthree">onboardingthree</string>
    <string name="onboarding_two">Temukan Kata Kunci pada Materi Favoritmu</string>
    <string name="onboarding_two_desc">Cari dan temukan istilah-istilah dalam matematika dengan mudah</string>
    <string name="onboarding_three">Asah Kemampuanmu dengan Latihan Pilihan</string>
    <string name="onboarding_three_desc">Asah kemampuanmu dengan mengerjakan latihan pada materi kesukaanmu</string>
    <string name="logo_desc">DictiMath logo</string>
    <string name="newaccount">LET\'S START LEARNING</string>
    <string name="hintNamaPengguna">Rahmatul Ulya</string>
    <string name="createprofile">Create Profile</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="akun">Already have an account ?</string>
    <string name="namasekolah">SMAN 1 Banda Aceh</string>
    <string name="classroomSub1">Kelas Populer</string>
    <string name="classroomDesc1">Kelas paling banyak di akses</string>
    <string name="eksponen_class">Eksponen</string>
    <string name="date">Senin, 1 Agt 2022</string>
    <string name="gradex">Kelas X</string>
    <string name="konsep">Konsep</string>
    <string name="latihan">Latihan</string>
    <string name="classroomSub2">Kelas yang tersedia untukmu</string>
    <string name="classroomDesc2">Semua kelas terbaik untukmu</string>
    <string name="spldv_class">SPLDV</string>
    <string name="semualatihan">Semua latihan untukmu</string>
    <string name="keywoard">Search Keywoard</string>
    <string name="search">Search</string>
    <string name="istilah">Istilah Matematika</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Mulai Tes</string>
    <string name="skor">"Skor Tes : "</string>
    <string name="title_activity_detail_page">DetailPageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="kamus_matematika">Kamus Matematika</string>
    <string name="desc_1">Apa yang Akan Kalian Pelajari?</string>
    <string name="desc_2">Materi Prasyarat yang Harus Kalian Kuasai</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Password</string>
    <string name="hintRePassword">Confirm Password</string>
    <string name="hintFullName">Nama Pengguna</string>
    <string name="hintSchool">Sekolah Asal</string>
    <string name="hintUsername">Username</string>
    <string name="selengkapnya">Lihat Selengkapnya</string>
    <string name="SignInDesc">Masuk ke akun mu untuk mendapatkan akses ke berbagai fitur menarik</string>
    <string name="SignUpBottom">Belum memiliki akun? Daftar sekarang</string>
    <string name="SignInBottom">Sudah memiliki akun? Masuk</string>
    <string name="btnMasuk">Masuk</string>
</resources>