<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    tools:context=".onboarding.OnboardingOneActivity">

    <ImageView
        android:id="@+id/ivObOneImg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/desc_obone"
        android:src="@drawable/onboard_one_img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_rectangle_secondary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/lewati"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_primary"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/lanjutkan"
        android:textColor="@color/text_white"
        app:layout_constraintBottom_toTopOf="@+id/btnSkip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvObOneTitle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/ObOneTitle"
        android:textColor="@color/text_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivObOneImg" />

    <TextView
        android:id="@+id/tvObOneDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/ObOneDesc"
        android:textColor="@color/text_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvObOneTitle" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/tvObOneDesc"
        app:srcCompat="@drawable/shape_circle_primary" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/tvObOneDesc"
        app:srcCompat="@drawable/shape_circle_secondary" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvObOneDesc"
        app:srcCompat="@drawable/shape_circle_secondary" />

</androidx.constraintlayout.widget.ConstraintLayout>