<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/text_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_white"
        tools:context=".home.dashboard.fragment.DashboardFragment">

        <TextView
            android:id="@+id/tvClassTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/classroomSub1"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvClassDesc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/classroomDesc1"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClassTitle1" />

        <TextView
            android:id="@+id/tvClassTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/classroomDesc2"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/rvPopularClass"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="358dp" />
        <TextView
            android:id="@+id/tvClassDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/classroomDesc2"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClassTitle2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPopularClass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            app:layout_goneMarginEnd="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClassDesc1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAvalaibleClass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvClassDesc2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>